Added submit stub for check form, styled check form

--- a/checkfi/src/Navigation.scss
+++ b/checkfi/src/Navigation.scss
@@ -12,5 +12,12 @@
       border-bottom: 2px solid black;
       color: black;
     }
+
+    &__active {
+      color: black;
+      bottom: 0px;
+      border-bottom: 2px solid black;
+      color: black;
+    }
   }
 }
