Added logo to navbar

--- a/checkfi/src/Check.scss
+++ b/checkfi/src/Check.scss
@@ -36,7 +36,7 @@ $rcs-white-background: linear-gradient(25deg, #fff, #eee) !default;
 $rcs-blue-background: linear-gradient(25deg, #0f509e, #1399cd) !default;
 $rcs-black-background: linear-gradient(25deg, #211c18, #aaa7a2) !default;
 $rcs-red-background: linear-gradient(25deg, #8b181b, #de1f27) !default;
-$rcs-purple-background: linear-gradient(25deg, #52307c, #7c5295) !default;
+$rcs-purple-background: linear-gradient(25deg, #8c52ff, #8c52ff) !default;
 
 .rcs {
   margin: 0 auto;
