--- a/checkfi/src/Navigation.scss
+++ b/checkfi/src/Navigation.scss
@@ -12,6 +12,18 @@
       border-bottom: 2px solid black;
       color: black;
     }
+
+    &:active {
+      color: black;
+      bottom: 0px;
+      border-bottom: 2px solid black;
+      color: black;
+    }
+  }
+
+  &__image {
+    height: 20px;
+    width: 100px;
   }
 }
 
