Reworked metamask login/connect/lock UX

--- a/checkfi/src/MetamaskConnection.scss
+++ b/checkfi/src/MetamaskConnection.scss
@@ -1,5 +1,9 @@
-.metamask {
+.metamask_button_container {
   padding: 3px 3px;
+}
+
+.metamask_account_container {
+  padding: 7px 0px 0px 0px
 }
 
 .btn-outline-info {
